packages/write/ui/menu.css
#menu > .menu:empty {
	display:none;
}

#menu {
	margin-top:1em;
}
#menu .ui.icon.menu .active.item {
	background-color: rgba(129,165,255,0.3);
}
#menu .ui.menu .item.has-active {
	background-color: rgba(129, 165, 255, 0.2);
}
#menu .popup {
	display:none;
	z-index:1;
}
#menu .ui.menu {
	position:relative;
}
#menu .ui.menu > .item:hover + .popup,
#menu .ui.menu > .item + .popup:hover {
	display:block;
	position:absolute;
	top:100%;
}

.ui.link.menu .item:hover,
.ui.menu .dropdown.item:hover,
.ui.menu .link.item:hover,
.ui.menu a.item:hover {
	background-color:rgba(129, 165, 255, 0.1);
}
.ui.icon.menu > .item.radio.checkbox.checked {
	background-color:rgba(129, 165, 255, 0.2);
}
#menu .ui.labeled.icon.menu .item {
	min-width:5em;
	padding:0.7em 0;
	border-radius: 0;
}
#menu .ui.menu:not(.vertical) .item {
	padding: 0.6em 0.7em;
}
.ui.menu {
	flex-wrap:wrap;
}
#menu .ui.tabular.mini.menu {
	min-height:2.4em;
}
#menu .ui.tabular.mini.menu > .item {
	padding:0 0.8em;
	z-index: 1;
}
#menu .ui.tab.menu.active {
	display:flex;
}
#menu .ui.attached.tab.menu {
	margin:0;
	width:100%;
}
#menu .item > img:not(.ui) {
	width:1.5em;
}
#menu .item:before {
	display:none;
}
#menu .divider {
	width:1px;
	background-color:#353535;
}
#menu .menu .item.disabled {
	opacity:0.5;
}
#menu .tabular.menu .item.disabled {
	display:none;
}

.ui.icon.menu > .item.radio.checkbox > input,
.ui.icon.menu > .item.radio.checkbox > label:before,
.ui.icon.menu > .item.radio.checkbox > label:after {
	display:none;
}
.ui.icon.menu > .item.radio.checkbox > label {
	padding-left:0;
}
#move {
	margin-top:0.5em;
}
/* TODO remove me with fomantic 2.7.2 */
.ui.inverted.menu .item.disabled, .ui.inverted.menu .item.disabled:hover {
	color: rgba(225, 225, 225, 0.3) !important;
}
.ui.menu > .item.disabled,
.ui.menu > .item.disabled:hover {
	color:inherit;
	cursor:pointer;
}

.ui.compact.icon.menu > .ui.radio.checkbox.item {
	padding: 0em 0.7em;
}

#move > .right.menu > .item {
	padding: 0 1em;
}

#store .item[data-command="view"] > .hide.icon,
#store .item.active[data-command="view"] > .unhide.icon {
	display:none;
}
#store .item.active[data-command="view"] > .hide.icon {
	display:block;
}

.ui.labeled.icon.menu .item > i.icons {
	height: 1em;
	display: block;
	font-size: 1.71428571em !important;
	margin: 0em auto 0.5rem !important;
}
.ui.labeled.icon.menu .item > i.icons > .corner.icon {
	font-size:0.55em;
}
.ui.compact.icon.menu {
	min-height: 2.4em;
}

